@@ -205,6 +205,15 @@ var createDataHandler = exports.Connection.createDataHandler = function(self) {
           if(data.length > 4) {
             // Retrieve the message size
             var sizeOfMessage = binaryutils.decodeUInt32(data, 0);
+            // If we have a negative sizeOfMessage emit error and return
+            if(sizeOfMessage < 0 || sizeOfMessage > self.maxBsonSize) {
+              // We got a parse Error fire it off then keep going
+              self.emit("parseError", {err:"socketHandler", trace:'', bin:self.buffer, parseState:{
+                sizeOfMessage:sizeOfMessage, 
+                bytesRead:self.bytesRead,
+                stubBuffer:self.stubBuffer}});              
+              return;
+            }
 
             // Ensure that the size of message is larger than 0 and less than the max allowed
             if(sizeOfMessage > 4 && sizeOfMessage < self.maxBsonSize && sizeOfMessage > data.length) {
@@ -255,14 +264,22 @@ var createDataHandler = exports.Connection.createDataHandler = function(self) {
               data = new Buffer(0);
 
             } else {
-              self.emit("message", data.slice(0, sizeOfMessage));
-              // Reset state of buffer
-              self.buffer = null;
-              self.sizeOfMessage = 0;
-              self.bytesRead = 0;
-              self.stubBuffer = null;
-              // Copy rest of message
-              data = data.slice(sizeOfMessage);
+              try {
+                self.emit("message", data.slice(0, sizeOfMessage));
+                // Reset state of buffer
+                self.buffer = null;
+                self.sizeOfMessage = 0;
+                self.bytesRead = 0;
+                self.stubBuffer = null;
+                // Copy rest of message
+                data = data.slice(sizeOfMessage);                
+              } catch (err) {
+                // We got a parse Error fire it off then keep going
+                self.emit("parseError", {err:"socketHandler", trace:err, bin:self.buffer, parseState:{
+                  sizeOfMessage:sizeOfMessage, 
+                  bytesRead:self.bytesRead,
+                  stubBuffer:self.stubBuffer}});
+              }
 
             }                        
           } else {
