@@ -255,10 +255,13 @@ Server.prototype.connect = function(dbInstance, options, callback) {
     }
   });
 
-  // Handle errors
+  // If we have a parser error we are in an unknown state, close everything and emit
+  // error
   connectionPool.on("parseError", function(message) {    
     // Force close the pool
-    if(connectionPool.isConnected()) self.stop();        
+    if(connectionPool.isConnected()) self.stop();
+    // Emit error
+    server.emit("error", message);
   });
   
   // Boot up connection poole, pass in a locator of callbacks
